# e-menu

./: .env  Dockerfile  README.md  alembic-db.ini  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: python-package.yml
alembic/versions/: 0001_init.py  0002.py  0003_create_mailpool_table.py
app/: db.py  main.py  settings.py
app/api/: deps.py  menu.py  menu_position.py  user.py  utils.py
app/models/: mail_pool.py  menu.py  user.py
app/schemas/: menu.py  user.py
app/utils/: enums.py  logger.py  mail_utils.py  vars.py
init_data/: init_schemas.py  main.py
tests/: conftest.py  test_mail_pool.py  utils.py
tests/menu/: fixtures.py  test_menu.py  test_menu_position.py
