[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kacper Misiek <315560@uwr.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
pydantic-settings = "^2.2.1"
uvicorn = "^0.27.1"
psycopg2 = "^2.9.9"
structlog = "^24.1.0"
apscheduler = "^3.10.4"
cryptography = "^42.0.5"
email-validator = "^2.1.1"
python-multipart = "^0.0.9"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.1.2"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.2"
isort = "^5.13.2"
httpx = "^0.27.0"
pytest-cov = "^4.1.0"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
